crates/keron-lang/tests/corpus/errors/check/fn_duplicate_arg.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: parameter `a` is already supplied
  --> 2:22
  |
2 | val x: Int = f(1, 2, a = 3)
  |                      ^^^^^
